--- a/component-page.html
+++ b/component-page.html
@@ -22,6 +22,11 @@
                 bottom: 50px;
                 right: 50px;
             }
+            bower-installer {
+                position: fixed;
+                bottom: 50px;
+                right: 120px;
+            }
         </style>
         <firebase-document
             id="doc"
