Fixing broken component add functionality

--- a/component-page.html
+++ b/component-page.html
@@ -40,7 +40,7 @@
 
 
         <component-list components="[[components]]" showcomponentinfo="true"></component-list>
-        <component-adder></component-adder>
+        <component-adder next-index="[[components.length]]"></component-adder>
         <bower-installer components="[[components]]"></bower-installer>
     </template>
     <script>
